Fixed issue with scrollbars on Windows

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -37,7 +37,7 @@ $wrapper-width      : $button-width + $frame-width
   bottom: 0
 
   -webkit-overflow-scrolling: touch
-  overflow: scroll
+  overflow: auto
 
   +transition-property(left, right)
   +transition-duration(400ms)
